@@ -1,4 +1,5 @@
 local LPN_gui_manager=require("script.LPN_gui_manager")
+local util = require("script.util")
 
 local function on_entity_build(e)
     if not e.entity then return end
@@ -18,9 +19,12 @@ local function on_entity_disapear(e)
 		return
 	end
 	if entity.name == "ptflog-provider" then
-		storage.ptflogchannel["DEFAULT"].building["ptflog-provider"][e.entity.unit_number] = nil
-        storage.ptflogtracker[e.entity.unit_number]=nil
-        LPN_gui_manager.update_manager__gen_gui()
+        local channel = storage.ptflogtracker[entity.unit_number]
+        if util.check(channel,entity,{name="iron-plate",quality="common"},"provider") then
+            storage.ptflogchannel[channel].building["ptflog-provider"][entity.unit_number] = nil
+            storage.ptflogtracker[entity.unit_number]=nil
+            LPN_gui_manager.update_manager__gen_gui()
+        end
 	end
 
 end
